--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "createToday": "node create-day.js -today",
+    "createToday": "node create-day.js -- -today true",
     "createDay": "node ./create-day.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1"
+  }
 }
