--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "createToday": "node ./create-day.js -- -today true",
+    "createToday": "node ./create-day.js -- -today",
     "ct": "npm run createToday",
     "createDay": "node ./create-day.js"
   },
